<resources>
    <string name="app_name">My 24Card Application</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="Login">登录</string>
    <string name="attempts">剩余次数：</string>
    <string name="play">开始/下一次</string>
    <string name="exit">退出</string>
    <string name="send">提交</string>
    <string name="score">当前得分为：</string>
</resources>
