<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".LoginActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview1"
        android:layout_marginTop="50dp"
        android:text="@string/username"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_alignBottom="@id/textview1"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@id/textview1"
        android:ems="15">
        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview2"
        android:layout_alignLeft="@id/textview1"
        android:layout_below="@id/textview1"
        android:layout_marginTop="38dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_alignBottom="@id/textview2"
        android:layout_alignLeft="@id/editText1"
        android:ems="15"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@id/editText2"
        android:layout_centerHorizontal="true"
        android:onClick="login"
        android:layout_marginTop="94dp"
        android:text="@string/Login"
        android:background="@android:color/transparent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview3"
        android:layout_alignLeft="@id/textview2"
        android:layout_below="@id/textview2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:text="@string/attempts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview4"
        android:layout_alignTop="@id/textview3"
        android:text="TextView"
        android:layout_toRightOf="@id/textview3"
        />



</RelativeLayout>
